@@ -20,7 +20,7 @@ open Pcaml;;
 Grammar.extend
   (let _ = (expr : 'expr Grammar.Entry.e) in
    let grammar_entry_create s =
-     Grammar.Entry.create (Grammar.of_entry expr) s
+     Grammar.create_local_entry (Grammar.of_entry expr) s
    in
    let parser_case : 'parser_case Grammar.Entry.e =
      grammar_entry_create "parser_case"
